changed about in home controller to magic

--- a/CAPstone/Views/Home/Index.cshtml
+++ b/CAPstone/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
 
 <div class="jumbotron">
     <h1>Parent's Date Night</h1>
-    <p class="lead">Welcome Parents!!!! This is where is gets easy, get started by letting us know your preferences.</p>
-    <p><a href="https://localhost:44323/api/preferences" class="btn btn-primary btn-lg">Preferences &raquo;</a></p>
+    <p class="lead">Welcome Parents!!!! This is where is gets easy, get started by registering, simply click below.</p>
+    <p><a href="https://localhost:44323/account/register" class="btn btn-primary btn-lg">Register &raquo;</a></p>
 </div>
 
 <div class="row">
