--- a/CAPstone/Views/Sitter/delete.cshtml
+++ b/CAPstone/Views/Sitter/delete.cshtml
@@ -1,11 +1,12 @@
 ﻿@model CAPstone.Models.Sitter
 
 @{
-    ViewBag.Title = "details";
+    ViewBag.Title = "delete";
 }
 
-<h2>details</h2>
+<h2>delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Sitter</h4>
     <hr />
@@ -51,8 +52,13 @@
         </dd>
 
     </dl>
+
+    @using (Html.BeginForm()) {
+        @Html.AntiForgeryToken()
+
+        <div class="form-actions no-color">
+            <input type="submit" value="Delete" class="btn btn-default" /> |
+            @Html.ActionLink("Back to List", "Index")
+        </div>
+    }
 </div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
