--- a/CAPstone/Views/Home/Magic.cshtml
+++ b/CAPstone/Views/Home/Magic.cshtml
@@ -1,7 +1,30 @@
 ﻿@{
     ViewBag.Title = "Magic";
 }
-<h2>See what parents' happiness looks like below.  Check out the magic that happens behind the scenes!!!</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<body>
+    <h2>See what parents' happiness looks like below.  Check out the magic that happens behind the scenes!!!</h2>
+    <h3>@ViewBag.Message</h3>
+
+    <button id="upload_widget" class="cloudinary-button">Upload files</button>
+
+    <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+
+    <script type="text/javascript">
+    var myWidget = cloudinary.createUploadWidget({
+        cloudName: 'my_cloud_name',
+        uploadPreset: 'my_preset'}, (error, result) => {
+            if (!error && result && result.event === "success") {
+                console.log('Done! Here is the image info: ', result.info);
+            }
+        }
+    )
+
+    document.getElementById("upload_widget").addEventListener("click", function(){
+        myWidget.open();
+    }, false);
+    </script>
+
+</body>
+
