--- a/CAPstone/Views/Preferences/index.cshtml
+++ b/CAPstone/Views/Preferences/index.cshtml
@@ -1,33 +1,56 @@
-﻿@model IEnumerable<CAPstone.Models.Preferences>
+﻿@model CAPstone.Models.ParentsPreferenceSelectionEditorViewModel
 
 @{
-    ViewBag.Title = "index";
+    ViewBag.Title = "Preferences";
 }
 
-<h2>index</h2>
+<h2>Get started by choosing your preferences below:</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Preference)
-        </th>
-        <th></th>
-    </tr>
+@using (Html.BeginForm("SubmitSelected", "Preferences", FormMethod.Post, new { encType = "multipart/form-data", name = "myform" }))
+{
+    <div>
+        <input type="checkbox" id="checkall" /><span>Check All</span>
+    </div>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Preference)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+    <div id="checkboxes">
+        <table class="table">
+            <tr>
+                <th>
+                    Select
+                </th>
+                <th>
+                    Preferences
+                </th>
+                <th></th>
+            </tr>
+            @Html.EditorFor(model => model.Preferences)
+        </table>
+    </div>
+    <hr />
+    <br />
+    <input type="submit" name="operation" id="submit" value="Submit Selected" />
+
+}
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+
+    <script type="text/javascript">
+
+        function toggleChecked(status) {
+            $("#checkboxes input").each(function () {
+                $(this).prop("checked", status);
+            });
+        }
+
+        $(document).ready(function () {
+
+            $("#checkall").prop('checked', true);
+
+            $("#checkall").click(function () {
+                var status = $("#checkall").prop('checked');
+                toggleChecked(status);
+            });
+        });
+    </script>
 }
 
-</table>
