commiting to push final project

--- a/CAPstone/Views/Parent/AddBudget.cshtml
+++ b/CAPstone/Views/Parent/AddBudget.cshtml
@@ -11,9 +11,10 @@
     <form id="my-form">
         <input type="text" name="Budget" placeholder="Enter Your Budget" />
 
-        <input type="button" value="Submit" onclick="AddBudget()">
+        <input type="button" value="Submit" onclick="miles()">
         <input type="button" value="Skip" onclick="miles()">
     </form>
+
 
     <script>
         function miles() {
