--- a/CAPstone/Views/Shared/_Layout.cshtml
+++ b/CAPstone/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Magic", "Magic", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Ratings & Reviews", "Create", "Ratings")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
