--- a/CAPstone/Views/Home/Magic.cshtml
+++ b/CAPstone/Views/Home/Magic.cshtml
@@ -3,28 +3,53 @@
 }
 
 
-<body>
-    <h2>See what parents' happiness looks like below.  Check out the magic that happens behind the scenes!!!</h2>
-    <h3>@ViewBag.Message</h3>
+    <body>
+        <h2>See what parents' happiness looks like below.  Check out the magic that happens behind the scenes!!!</h2>
+        <h3>@ViewBag.Message</h3>
 
-    <button id="upload_widget" class="cloudinary-button">Upload files</button>
+        <br />
+        <br />
+        <br />
+        <br />
+        <br />
 
-    <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+        <button id="upload_widget" class="cloudinary-button">Upload files</button>
 
-    <script type="text/javascript">
-    var myWidget = cloudinary.createUploadWidget({
-        cloudName: 'my_cloud_name',
-        uploadPreset: 'my_preset'}, (error, result) => {
-            if (!error && result && result.event === "success") {
-                console.log('Done! Here is the image info: ', result.info);
+        <script src="https://widget.cloudinary.com/v2.0/global/all.js" type="text/javascript"></script>
+
+        <script type="text/javascript">
+            var myWidget = cloudinary.createUploadWidget({
+                cloudName: 'my_cloud_name',
+                uploadPreset: 'my_preset'
+            }, (error, result) => {
+                if (!error && result && result.event === "success") {
+                    console.log('Done! Here is the image info: ', result.info);
+                }
             }
-        }
-    )
+            )
 
-    document.getElementById("upload_widget").addEventListener("click", function(){
-        myWidget.open();
-    }, false);
-    </script>
+            document.getElementById("upload_widget").addEventListener("click", function () {
+                myWidget.open();
+            }, false);
+        </script>
 
-</body>
+        <script src="https://product-gallery.cloudinary.com/all.js" type="text/javascript">
+        </script>
+        <div id="my-gallery" style="max-width:80%">
+        </div>
+        <script>
+            const myGallery = cloudinary.galleryWidget({
+            container: "#my-gallery",
+            cloudName: 'my_cloud_name',
+            mediaAssets: [{ tag: " " }]
+            });
+            myGallery.render();
+
+        </script>
+
+        <script type="text/javascript">
+            function add_chatinline() { var hccid = 59037510; var nt = document.createElement("script"); nt.async = true; nt.src = "https://mylivechat.com/chatinline.aspx?hccid=" + hccid; var ct = document.getElementsByTagName("script")[0]; ct.parentNode.insertBefore(nt, ct); }
+            add_chatinline();</script>
+    </body>
+
 
