--- a/CAPstone/Views/Sitter/index.cshtml
+++ b/CAPstone/Views/Sitter/index.cshtml
@@ -1,14 +1,9 @@
 ﻿@model IEnumerable<CAPstone.Models.Sitter>
 
-@{
-    ViewBag.Title = "index";
-}
-
-<h2>index</h2>
-
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
 <table class="table">
     <tr>
         <th>
@@ -22,7 +17,7 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Details)
-        </th>
+        </th>>
         <th></th>
     </tr>
 
@@ -39,14 +34,11 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Details)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.ApplicationId)
-        </td>
+        </td>=
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
             @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.ActionLink("Rating", "Rating")
         </td>
     </tr>
 }
